k8s/overlays/minikube/patch-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: rental
spec:
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Never
