k8s/overlays/minikube/patch-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: rental
spec:
  template:
    spec:
      containers:
        - name: client
          imagePullPolicy: Never
